@@ -3,10 +3,10 @@ dnl $Id$
 
 # Init.
 AC_PREREQ(2.57)
-AC_INIT(libticables2, 0.0.8, [tilp-users@lists.sourceforge.net])
+AC_INIT(libticables2, 0.0.9, [tilp-users@lists.sourceforge.net])
 
 dnl Release versioning info
-VERSION="0.0.7"
+VERSION="0.0.9"
 AC_SUBST(VERSION)
 
 dnl Library version.
@@ -16,8 +16,8 @@ dnl  * If you added things to the api, increment 'current',
 dnl    reset 'revision' and increment 'age'.
 dnl  * If you changed/removed things from the api, increment 'current',
 dnl    reset 'revision' and reset 'age'.
-LT_CURRENT=0
-LT_REVISION=8
+LT_CURRENT=1
+LT_REVISION=0
 LT_AGE=0
 LT_LIBVERSION="$LT_CURRENT:$LT_REVISION:$LT_AGE"
 AC_SUBST(LT_LIBVERSION, $LT_CURRENT:$LT_REVISION:$LT_AGE)
